# social-network

./: .env_template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pytest.ini
nginx/: nginx.conf
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2024_03_09_1928-3b299e0fe97c_.py
src/core/: __init__.py  db_helper.py  settings.py
src/dependencies/: __init__.py  users.py
src/exceptions/: __init__.py  errors.py  http_exceptions.py  request_exceptions.py
src/models/: __init__.py  base.py  media.py  tweet_media_association.py  tweets.py  user_tweet_association.py  users.py
src/repositories/: __init__.py  medias.py  repository.py  tweet_media_repository.py  tweets.py  user_tweet_repository.py  users.py
src/routers/: __init__.py  medias.py  tweets.py  users.py
src/schemas/: __init__.py  exceptions.py  generic.py  tweets.py  users.py
src/services/: __init__.py  media_service.py  tweet_service.py  user_service.py  user_tweet_service.py  utils.py
src/types/: __init__.py  path.py  query.py
tests/: .env_template  Dockerfile  conftest.py  docker-compose.yml  pyproject.toml  test_app.py
tests/fixtures/: create_tweets.json  create_users.json  fixtures.py  follow_to_user.json  like_tweet.json  media_request_validation_error.json  tweets_authenticated_error.json  tweets_not_found_error.json  tweets_request_validation_error.json  users_authenticated_error.json  users_not_found_error.json  users_request_validation_error.json
